--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-﻿flask==2.3.3
-flask-cors==4.0.1
-pandas==2.2.2
-numpy==1.26.4
-scikit-learn==1.6.1
+Flask==2.3.3
+Flask-CORS==4.0.0
+Werkzeug==2.3.7
 gunicorn==21.2.0
-tensorflow
-joblib
+tensorflow-cpu==2.13.0  # Use CPU version to reduce memory usage
+numpy==1.24.3
+joblib==1.3.2
+scikit-learn==1.3.0
