--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 Flask==2.3.3
 Flask-CORS==4.0.0
-Werkzeug==2.3.7
 gunicorn==21.2.0
-tensorflow-cpu==2.13.0  # Use CPU version to reduce memory usage
 numpy==1.24.3
 joblib==1.3.2
-scikit-learn==1.3.0
-pandas==2.2.2
+tflite-runtime==2.13.0  # Much smaller than full TensorFlow
+psutil==5.9.5
